fixed minor alignment issue

--- a/src/components/OurJourney/OurJourney.css
+++ b/src/components/OurJourney/OurJourney.css
@@ -48,7 +48,7 @@ h2, .font-avenue {
 	letter-spacing: 1.5px;
 	margin-left: calc(8% + 40px);
 	text-align: center;
-	vertical-align: middle;
+	height: 74px;
 }
 
 @media (max-width: 810px) {
